VO-2925 - Vehicle Details overflow bugfixes
- Well titles clashing with subtitles
- Checkout box text wrapping in certain locations

--- a/app/styles/lang/_es.scss
+++ b/app/styles/lang/_es.scss
@@ -1,11 +1,29 @@
 body.lang_es {
 
   /* Floor Plan */
-  .search-form {
-    .form-block {
-      .range-end {
-        width: 125px;
+  #FloorplanPage {
+    .search-form {
+      .form-block {
+        .range-end {
+          width: 125px;
+        }
       }
+    }
+  }
+
+  /* Details */
+  #VehicleDetailsPage {
+    @media (max-width: 1090px) {
+
+      .well-title {
+        font-size: 16px;
+
+        .well-sub-title, a {
+          font-size: 13px;
+          margin-top: 2px;
+        }
+      }
+
     }
   }
 }
