--- a/app/styles/lang/_fr_CA.scss
+++ b/app/styles/lang/_fr_CA.scss
@@ -1,15 +1,42 @@
 body.lang_fr_CA {
 
   /* Dashboard */
-  @media (max-width: 1090px) {
-    .dash-well {
+  #DashboardPage {
+    @media (max-width: 1090px) {
+      .dash-well {
+        .well-title {
+          font-size: 18px;
+        }
+
+        .accordion-button {
+          width: 340px;
+        }
+      }
+    }
+  }
+
+  /* Details */
+  #VehicleDetailsPage {
+    @media (max-width: 1090px) {
+
       .well-title {
-        font-size: 18px;
+        font-size: 16px;
+
+        .well-sub-title, a {
+          font-size: 13px;
+          margin-top: 2px;
+        }
       }
 
-      .accordion-button {
-        width: 340px;
+      .btn-save-changes {
+        height: auto;
       }
+
+      .payoff-group .btn-text {
+        width: 100%;
+        padding-bottom: 5px;
+      }
+
     }
   }
 }
